[gd_scene load_steps=3 format=2]

[ext_resource path="res://Signal Graph/Front/Canvas.gd" type="Script" id=1]
[ext_resource path="res://Signal Graph/Front/Main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="Canvas" type="TextureRect" parent="."]
anchor_top = 0.105
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -26.0
script = ExtResource( 1 )

[node name="TopPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_left = 128.0
margin_right = -128.0
margin_bottom = 54.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 761.0
margin_bottom = 47.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Node" type="Button" parent="TopPanel/HBoxContainer"]
margin_right = 46.0
margin_bottom = 40.0
text = "Node"

[node name="Line" type="Button" parent="TopPanel/HBoxContainer"]
margin_left = 66.0
margin_right = 105.0
margin_bottom = 40.0
text = "Line"

[node name="Clear" type="Button" parent="TopPanel/HBoxContainer"]
margin_left = 125.0
margin_right = 217.0
margin_bottom = 40.0
text = "Clear Canvas"

[node name="Label" type="Label" parent="TopPanel/HBoxContainer"]
margin_left = 237.0
margin_top = 13.0
margin_right = 307.0
margin_bottom = 27.0
text = "Add Nodes"

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -104.0
margin_right = 157.0
margin_bottom = 135.0
window_title = "How to use"

[node name="Label" type="Label" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Buttons:
1. Node: Enter add Nodes mode
2. Line: Enter add Edges mode
3. Clear Canvas: Delete all nodes and edges

Modes:
1.Add Nodes: Left click to add a node. Hold left on a node to drag it around. right click a node to delete it.
2.Add Edges:click on a node to draw an edge from it. If click on another node you will create an edge to it. If you click anywhere else you will stop drawing an edge."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_up" from="TopPanel/HBoxContainer/Node" to="." method="_on_Node_button_up"]
[connection signal="button_up" from="TopPanel/HBoxContainer/Line" to="." method="_on_Line_button_up"]
[connection signal="button_up" from="TopPanel/HBoxContainer/Clear" to="." method="_on_Clear_button_up"]
